CHANGES-1.2.txt
---------------

CHANGES IN CUPS V1.2.8

	- Documentation fixes (STR #2141, STR #2157)
	- The scheduler did not choose SSL certificates correctly
	  on Mac OS X (STR #2225)
	- The scheduler could get in an infinite loop when
	  printing to a remote class (STR #2228)
	- The jobs web page did not have separating space after
	  the number of pages column (STR #2230)
	- Added French localization (STR #2221)
	- Updated Spanish localization (STR #2223)
	- Updated Japanese localization (STR #2216)
	- cupsBorderlessScalingFacter was limited to a range of
	  0.9 to 1.1, but some printers need larger values (STR
	  #2222)
	- Landscape printing of PDF files did not always work
	  (STR #2149)
	- Fixed slow USB printing on Minolta printers (STR #2104,
	  STR #2219)
	- The ZPL label printer driver could produce stretched
	  output (PR #6448)
	- The IPP backend now clears the printer-state-message
	  when there are no outstanding errors or warnings (STR
	  #2126)
	- The CUPS Java scripting support did not work with
	  recent versions of Java due to the use of Sun's private
	  Base64 class (STR #2152)
	- The scheduler did not pass HTTP GET form variables to
	  custom CGI programs (STR #2173)
	- The lpoptions command now displays the reason why a PPD
	  file cannot be found (STR #2184)
	- The scheduler did not accept "none" as a browse
	  protocol name (STR #2200)
	- The scheduler still loaded the remote printer cache,
	  even when browsing was disabled (STR #2198)
	- The SNMP backend now shows OfficeJet printers with the
	  "HP" manufacturer prefix (STR #2151)
	- Web interface HTML cleanup (STR #2153)
	- The parallel backend consumed 100% CPU on FreeBSD due
	  to an apparently common parallel port driver bug (STR
	  #2161)
	- ippReadIO() incorrectly returned IPP_IDLE when the
	  initial IPP message header could not be read (STR
	  #2179)
	- cupsRasterInterpretPPD() did not support custom options
	  (STR #1960)